--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.8.0",
+    "@react-native-firebase/auth": "^10.8.0",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "@reduxjs/toolkit": "^1.5.0",
     "formik": "^2.2.6",
     "react": "16.13.1",
     "react-native": "0.63.4",
@@ -26,6 +28,8 @@
     "react-native-screens": "^2.17.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^8.0.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "yup": "^0.32.8"
   },
   "devDependencies": {
