--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "@reduxjs/toolkit": "^1.5.0",
+    "apisauce": "^2.0.1",
     "formik": "^2.2.6",
+    "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-dotenv": "^2.5.3",
     "react-native-gesture-handler": "^1.10.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.7.1",
