--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "apisauce": "^2.0.1",
     "formik": "^2.2.6",
     "lodash": "^4.17.20",
+    "lottie-ios": "^3.1.8",
+    "lottie-react-native": "^3.5.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-dotenv": "^2.5.3",
