--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-screens": "^2.17.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^8.0.0",
+    "react-native-webview": "^11.2.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "yup": "^0.32.8"
