--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^6.0.0",
     "@react-native-firebase/app": "^10.8.1",
     "@react-native-firebase/auth": "^10.8.1",
     "@react-native-firebase/firestore": "^10.8.1",
